# AlgorithmsTesting

./: .gitignore  README.md  a.out  algotester.py  bashutils.sh  setup.cfg  setup.py  test.py  test.sh  testing-pipeline.md  todo.md
algotester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
module-01/: 01-tests.txt
module-03/: 10k_in_the_same_place.txt  default.txt  horizontal_line.txt  vertical_line.txt
module-05/: 80k.txt  80k2.txt  fully-connected.txt  medium-case-01-relabeled.txt  medium-case-01.txt  medium-case-02.txt  medium-case-03.txt  small-01.txt  small-02.txt  testcasegenerator.py
module-07/: sample.txt  small-00.txt  small-01.txt  small-02.txt  small-03.txt  small-04.txt  small-05.txt  small-06.txt  small-07.txt  small-08.txt  small-09.txt  small-10.txt  small-11.txt  small-12.txt  small-13.txt  small-14.txt  small-15.txt  small-16.txt  small-17.txt  small-18.txt  small-19.txt  tricky.txt
module-08/: flat.txt  negative.txt  onecol.txt  onerow.txt  sample_case.txt  simple5x5.txt  volcano.txt
module-10/: sample.txt
src/algotester/: algotester.py
