[metadata]
name = algotester
version = 0.1.1
description = A tool to test programs for CS4102

[options]
zip_safe=False
include_package_data=True
package_dir=
    =src
packages=find:
install_requires = click

[options.entry_points]
console_scripts =
    algotester = algotester.algotester:cli

[options.packages.find]
where=src
